@@ -4,15 +4,45 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 
-public class Multidoku {
+/**
+ * The Multidoku class represents a Multidoku puzzle.
+ */
+public class Multidoku implements Doku {
     private ArrayList<Sudoku> sudokus;
     private ArrayList<ArrayList<Integer>> bindBlocks;
 
+    /**
+     * Create a Multidoku puzzle
+     * @param sudokus The Sudokus of the Multidoku puzzle
+     * @param bindBlocks The bind blocks of the Multidoku puzzle
+     */
     public Multidoku(ArrayList<Sudoku> sudokus, ArrayList<ArrayList<Integer>> bindBlocks) {
         this.sudokus = sudokus;
         this.bindBlocks = bindBlocks;
     }
 
+    /**
+     * Check if a block is already binded
+     * @param indexSudoku1 The index of the first Sudoku
+     * @param blockSudoku1 The index of the block in the first Sudoku
+     * @return The index of the second Sudoku and the index of the block in the second Sudoku if the block is already binded, null otherwise
+     */
+    public Pair<Integer, Integer> hasBindBlock(int indexSudoku1, int blockSudoku1) {
+        for (ArrayList<Integer> bindBlock : bindBlocks) {
+            if (bindBlock.get(0) == indexSudoku1 && bindBlock.get(1) == blockSudoku1) {
+                return new Pair<>(bindBlock.get(2), bindBlock.get(3));
+            }
+            if(bindBlock.get(2) == indexSudoku1 && bindBlock.get(3) == blockSudoku1){
+                return new Pair<>(bindBlock.get(0), bindBlock.get(1));
+            }
+        }
+        return null;
+    }
+
+    /**
+     * Check if the Multidoku puzzle is coherent
+     * @return True if the Multidoku puzzle is coherent, false otherwise
+     */
     public boolean checkCoherence(){
         for (ArrayList<Integer> bindBlock : bindBlocks) {
             int indexSudoku1 = bindBlock.get(0);
@@ -30,19 +60,29 @@ public class Multidoku {
         return true;
     }
 
+    /**
+     * Get the Sudokus of the Multidoku puzzle
+     * @return The Sudokus of the Multidoku puzzle
+     */
     public ArrayList<Sudoku> getSudokus() {
         return sudokus;
     }
 
+    /**
+     * Get the bind blocks of the Multidoku puzzle
+     * @return The bind blocks of the Multidoku puzzle
+     */
     public ArrayList<ArrayList<Integer>> getBindBlocks() {
         return bindBlocks;
     }
 
+    /**
+     * Solve the Multidoku puzzle using rules 
+     */
     public void solveUsingRules() {
         boolean solved = false;
         for(Sudoku sudoku : sudokus){
             boolean progressMade = true;
-            int blockSize = (int) Math.sqrt(sudoku.dimensions.first);
             while (!solved && progressMade) {
                 solved = true;
                 progressMade = false;
@@ -51,28 +91,22 @@ public class Multidoku {
                         int index = i * sudoku.dimensions.second + j;
                         if (sudoku.sudoku.get(index).first == 0) {
                             solved = false;
-                            ArrayList<Integer> possibleValues = new ArrayList<>();
-                            for (int k = 1; k <= sudoku.dimensions.first; k++) {
-                                possibleValues.add(k);
-                            }
-                            for (int k = 0; k < sudoku.dimensions.first; k++) {
-                                int index1 = k * sudoku.dimensions.second + j;
-                                possibleValues.remove(sudoku.sudoku.get(index1).first);
-                            }
-                            for (int k = 0; k < sudoku.dimensions.second; k++) {
-                                int index1 = i * sudoku.dimensions.second + k;
-                                possibleValues.remove(sudoku.sudoku.get(index1).first);
-                            }
-                            int boxRow = i / blockSize;
-                            int boxCol = j / blockSize;
-                            for (int k = 0; k < blockSize; k++) {
-                                for (int l = 0; l < blockSize; l++) {
-                                    int index1 = (boxRow * blockSize + k) * sudoku.dimensions.second + (boxCol * blockSize + l);
-                                    possibleValues.remove(sudoku.sudoku.get(index1).first);
+
+                            ArrayList<Integer> possibleValues = getPossibleValues(sudoku, i, j);
+
+                            Pair<Integer, Integer> bindBlock = hasBindBlock(sudokus.indexOf(sudoku), sudoku.sudoku.get(index).second);
+                            if (bindBlock != null) {
+                                List<Integer> block = sudokus.get(bindBlock.first).getBlock(bindBlock.second);
+                                for (Integer integer : block) {
+                                    if (integer != 0) {
+                                        possibleValues.remove((Integer) integer);
+                                    }
                                 }
                             }
+
                             if (possibleValues.size() == 1) {
-                                sudoku.sudoku.set(index, new Pair<>(possibleValues.getFirst(), 9));
+                                sudoku.sudoku.set(index, new Pair<>(possibleValues.get(0), sudoku.sudoku.get(index).second));
+                                sudoku.blocks.get(sudoku.sudoku.get(index).second).getCases().add(index);
                                 progressMade = true;
                             } else if (possibleValues.isEmpty()) {
                                 return;
@@ -99,7 +133,46 @@ public class Multidoku {
         }
     }
 
+    /**
+     * Get the possible values for a case
+     * @param sudoku The Sudoku puzzle
+     * @param i The row of the case
+     * @param j The column of the case
+     * @return The possible values for the case
+     */
+    private ArrayList<Integer> getPossibleValues(Sudoku sudoku, int i, int j) {
+        ArrayList<Integer> possibleValues = new ArrayList<>();
+        // Add all possibilities to the case
+        for (int k = 1; k <= sudoku.dimensions.first; k++) {
+            possibleValues.add(k);
+        }
 
+        // Check if value in column is already taken
+        for (int k = 0; k < sudoku.dimensions.first; k++) {
+            int index1 = k * sudoku.dimensions.second + j;
+            possibleValues.remove((Integer) sudoku.sudoku.get(index1).first);
+        }
+
+        // Check if value in row is already taken
+        for (int k = 0; k < sudoku.dimensions.second; k++) {
+            int index1 = i * sudoku.dimensions.second + k;
+            possibleValues.remove((Integer) sudoku.sudoku.get(index1).first);
+        }
+        int index = i * sudoku.dimensions.second + j;
+        // Check if value in block is already taken
+        for (int indexSudoku : sudoku.blocks.get(sudoku.sudoku.get(index).second).getCases()) {
+            if (indexSudoku != index) {
+                possibleValues.remove((Integer) sudoku.sudoku.get(indexSudoku).first);
+            }
+        }
+        return possibleValues;
+    }
+
+
+    /**
+     * Prints the Multidoku puzzle to the output
+     */
+    @Override
     public String toString() {
         StringBuilder sb = new StringBuilder();
         for (Sudoku sudoku : sudokus) {
